backend-server/k8s-services-iot/monitoring/prometheus-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`93d92c4a-e3bf-4ea6-93c6.afab44153cac.isard.nuvulet.itb.cat`) && PathPrefix(`/prometheus`)
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
